feat: node server implemented
