# backend/note/internal/api/http/v1/note/registration.go
@@ -1,0 +1,7 @@
+package note
+
+import "github.com/go-chi/chi/v5"
+
+func RegisterNoteServerHandler(router chi.Router, handler ServerInterface) {
+	HandlerFromMuxWithBaseURL(handler, router, "/api/v1")
+}
